compiler/ifcc-test-output/tests-testfiles-8_doubleDeclaV/gcc-compile.txt
input.c: In function ‘main’:
input.c:3:9: error: redeclaration of ‘a’ with no linkage
    3 |     int a = 2;
      |         ^
input.c:2:9: note: previous declaration of ‘a’ with type ‘int’
    2 |     int a;
      |         ^

exit status: 1
